web-infras/parser/tests/fixtures/esprima/es2017/trailing-commas/invalid-empty-parameters/output.txt
[SyntaxError]: Unexpect trailing comma. (1,12)
1|function f(,){}
 |          ^
